--- a/style.css
+++ b/style.css
@@ -1,9 +1,35 @@
+/* Default styles for small screens & anything not caught by @media */
 body {
     background-color: aqua;
 }
 
+h3 {
+    display: block;
+}
+/* Styles for screens 600px wide and larger */
 @media screen and (min-width: 600px) {
     body {
         background-color: palevioletred;
     }    
 }
+
+
+/* Create three equal columns that float next to each other */
+.column {
+    float: left;
+    width: 33.33%;
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
+  @media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+    }
+  }
